--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
     <script>
         // Замените 'username' и 'repository' на ваши данные
-        const username = 'your-github-username';
-        const repository = 'your-repository-name';
+        const username = 'leonidtsk';
+        const repository = 'tffiles';
 
         // Функция для получения списка файлов
         async function fetchFiles() {
