--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <ul id="file-list"></ul>
 
     <script>
-        // Замените 'username' и 'repository' на ваши данные
-        const username = 'leonidtsk';
+        // Замените 'your-github-username' и 'your-repository-name' на ваши данные
+        const username = 'leonditsk';
         const repository = 'tffiles';
 
         // Функция для получения списка файлов
