--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         // Функция для получения списка файлов
         async function fetchFiles() {
             try {
-                const response = await fetch('https://api.github.com/repos/${username}/${repository}/contents/');
+                const response = await fetch(`https://api.github.com/repos/${username}/${repository}/contents/`);
                 if (!response.ok) {
                     throw new Error('Сеть ответила с ошибкой');
                 }
