--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -31,7 +30,7 @@
     <script>
         const owner = 'leonidtsk';
         const repo = 'tffiles';
-        const apiUrl = https://api.github.com/repos/${owner}/${repo}/contents/;
+        const apiUrl = `https://api.github.com/repos/${owner}/${repo}/contents/`;
 
         fetch(apiUrl)
             .then(response => {
