--- a/index.html
+++ b/index.html
@@ -11,9 +11,25 @@
         }
         ul {
             list-style-type: none;
+            padding: 0;
         }
         li {
             margin: 5px 0;
+            position: relative; /* Для псевдо-элемента */
+            padding-bottom: 10px; /* Отступ снизу для разделителя */
+        }
+        li::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 1px;
+            background-color: #ccc; /* Серый цвет для разделителя */
+            display: block;
+        }
+        li:last-child::after {
+            display: none; /* Убираем разделитель после последнего элемента */
         }
         a {
             text-decoration: none;
@@ -22,9 +38,9 @@
             align-items: center;
         }
         img {
-            margin-right: 8px;
-            width: 16px;  /* Размер иконки */
-            height: 16px;
+            margin-right: 10px;
+            width: 24px;  /* Увеличиваем размер иконки */
+            height: 24px;
         }
         a:hover {
             text-decoration: underline;
